--- a/core/pom.xml
+++ b/core/pom.xml
@@ -28,7 +28,7 @@
   <groupId>org.mybatis.generator</groupId>
   <artifactId>mybatis-generator</artifactId>
   <name>MyBatis Generator</name>
-  <version>1.3.6.10-SNAPSHOT</version>
+  <version>1.3.6.10</version>
   <packaging>pom</packaging>
 
   <inceptionYear>2006</inceptionYear>
