--- a/core/pom.xml
+++ b/core/pom.xml
@@ -345,12 +345,12 @@
 
   <modules>
     <module>mybatis-generator-core</module>
-    <!--<module>mybatis-generator-systests-domtests</module>-->
+    <module>mybatis-generator-systests-domtests</module>
     <module>mybatis-generator-maven-plugin</module>
-    <!--<module>mybatis-generator-systests-common</module>-->
-    <!--<module>mybatis-generator-systests-mybatis3</module>-->
-    <!--<module>mybatis-generator-systests-ibatis2-java2</module>-->
-    <!--<module>mybatis-generator-systests-ibatis2-java5</module>-->
+    <module>mybatis-generator-systests-common</module>
+    <module>mybatis-generator-systests-mybatis3</module>
+    <module>mybatis-generator-systests-ibatis2-java2</module>
+    <module>mybatis-generator-systests-ibatis2-java5</module>
   </modules>
 
   <profiles>
