--- a/core/pom.xml
+++ b/core/pom.xml
@@ -28,7 +28,7 @@
   <groupId>org.mybatis.generator</groupId>
   <artifactId>mybatis-generator</artifactId>
   <name>MyBatis Generator</name>
-  <version>1.3.6.10</version>
+  <version>1.3.6.20</version>
   <packaging>pom</packaging>
 
   <inceptionYear>2006</inceptionYear>
@@ -345,12 +345,12 @@
 
   <modules>
     <module>mybatis-generator-core</module>
-    <module>mybatis-generator-systests-domtests</module>
+    <!--<module>mybatis-generator-systests-domtests</module>-->
     <module>mybatis-generator-maven-plugin</module>
-    <module>mybatis-generator-systests-common</module>
-    <module>mybatis-generator-systests-mybatis3</module>
+    <!--<module>mybatis-generator-systests-common</module>-->
+    <!--<module>mybatis-generator-systests-mybatis3</module>-->
     <!--<module>mybatis-generator-systests-ibatis2-java2</module>-->
-    <module>mybatis-generator-systests-ibatis2-java5</module>
+    <!--<module>mybatis-generator-systests-ibatis2-java5</module>-->
   </modules>
 
   <profiles>
