--- a/core/pom.xml
+++ b/core/pom.xml
@@ -35,33 +35,47 @@
 
   <description>Parent POM for MyBatis Generator</description>
 
-    <!--本地的jar包库-->
-    <repositories>
-        <repository>
-            <id>local-snapshots</id>
-            <url>http://localhost:8081/nexus/content/repositories/local-snapshots/</url>
-            <snapshots>
-                <enabled>true</enabled>
-                <updatePolicy>always</updatePolicy>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>local-releases</id>
-            <name>ayhuli releases repository</name>
-            <url>http://127.0.0.1:8081/nexus/content/groups/public/</url>
-        </repository>
-    </repositories>
+    <!--&lt;!&ndash;本地的jar包库&ndash;&gt;-->
+    <!--<repositories>-->
+        <!--<repository>-->
+            <!--<id>local-snapshots</id>-->
+            <!--<url>http://localhost:8081/nexus/content/repositories/local-snapshots/</url>-->
+            <!--<snapshots>-->
+                <!--<enabled>true</enabled>-->
+                <!--<updatePolicy>always</updatePolicy>-->
+            <!--</snapshots>-->
+        <!--</repository>-->
+        <!--<repository>-->
+            <!--<id>local-releases</id>-->
+            <!--<name>ayhuli releases repository</name>-->
+            <!--<url>http://127.0.0.1:8081/nexus/content/groups/public/</url>-->
+        <!--</repository>-->
+    <!--</repositories>-->
 
-    <!--指定Maven分发构件的位置-->
+    <!--&lt;!&ndash;指定Maven分发构件的位置&ndash;&gt;-->
+    <!--<distributionManagement>-->
+        <!--<snapshotRepository>-->
+            <!--<id>local-snapshots</id>-->
+            <!--<url>http://localhost:8081/nexus/content/repositories/local-snapshots</url>-->
+        <!--</snapshotRepository>-->
+        <!--<repository>-->
+            <!--<id>local-releases</id>-->
+            <!--<url>http://localhost:8081/nexus/content/repositories/local-releases</url>-->
+        <!--</repository>-->
+    <!--</distributionManagement>-->
+
+    <!-- 组件上传配置 -->
     <distributionManagement>
-        <snapshotRepository>
-            <id>local-snapshots</id>
-            <url>http://localhost:8081/nexus/content/repositories/local-snapshots</url>
-        </snapshotRepository>
         <repository>
-            <id>local-releases</id>
-            <url>http://localhost:8081/nexus/content/repositories/local-releases</url>
+            <id>local-nexus-releases</id>
+            <name>Nexus Release Repository</name>
+            <url>http://192.168.100.24:9020/nexus/content/repositories/releases/</url>
         </repository>
+        <snapshotRepository>
+            <id>local-nexus-snapshots</id>
+            <name>Nexus Snapshot Repository</name>
+            <url>http://192.168.100.24:9020/nexus/content/repositories/snapshots/</url>
+        </snapshotRepository>
     </distributionManagement>
 
   <scm>
